--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "cors": "^2.8.5",
+    "eslint": "^8.7.0",
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "typescript": "^4.5.4"
   }
 }
