--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "URL shortener with MongoDB",
   "main": "index.js",
   "scripts": {
+    "build:watch": "tsc -w",
+    "dev": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +22,10 @@
     "eslint": "^8.7.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
+    "tslint": "^6.1.3",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
